--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  freezed_annotation: ^3.1.0
+  freezed_annotation: ^2.4.4
   json_serializable: ^6.9.5
   flutter_bloc: ^9.1.1
   dio: ^5.9.0
   logger: ^2.6.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  freezed: ^3.1.0
+  freezed: ^2.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
